[gd_scene load_steps=5 format=3 uid="uid://bgpe5jxy3bqyg"]

[ext_resource type="Script" path="res://Scripts/work_hud.gd" id="1_sjxfl"]

[sub_resource type="LabelSettings" id="LabelSettings_vl5av"]
font_size = 45

[sub_resource type="LabelSettings" id="LabelSettings_am3gv"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_pppsh"]
font_size = 30

[node name="WorkHUD" type="Node2D"]
script = ExtResource("1_sjxfl")

[node name="BG" type="ColorRect" parent="."]
offset_left = 62.0
offset_top = 37.0
offset_right = 1012.0
offset_bottom = 512.0
color = Color(0.0235294, 0.0588235, 0.00392157, 1)

[node name="WorkNameTitle" type="Label" parent="BG"]
layout_mode = 0
offset_right = 954.0
offset_bottom = 122.0
text = "Work Name"
label_settings = SubResource("LabelSettings_vl5av")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SalaryDescriptionTxt" type="Label" parent="BG"]
layout_mode = 0
offset_left = 49.0
offset_top = 113.0
offset_right = 908.0
offset_bottom = 239.0
text = "Salary per Hour: $00"
label_settings = SubResource("LabelSettings_am3gv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionTxt" type="Label" parent="BG"]
layout_mode = 0
offset_left = 57.0
offset_top = 244.0
offset_right = 907.0
offset_bottom = 374.0
text = "Hungry Cost per Hour: 5
Sleep Cost per Hour: 3"
label_settings = SubResource("LabelSettings_pppsh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorkBtn" type="Button" parent="BG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.5
offset_top = -91.0
offset_right = 136.5
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Work
"

[node name="CloseBtn" type="Button" parent="BG"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -62.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "X"

[connection signal="pressed" from="BG/WorkBtn" to="." method="_on_work_btn_pressed"]
[connection signal="pressed" from="BG/CloseBtn" to="." method="_on_close_btn_pressed"]
